<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="com.doyley.backgroundvideo.MainActivity">

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/prepare_video"
		android:id="@+id/prepare_video"
		android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
		android:enabled="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_video"
		android:id="@+id/start_video"
		android:layout_below="@+id/prepare_video"
		android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
		android:enabled="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_video_activity"
		android:id="@+id/start_video_activity"
		android:layout_below="@+id/start_video"
		android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
		android:enabled="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/stop_video"
		android:id="@+id/stop_video"
		android:layout_below="@+id/start_video_activity" android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
		android:enabled="false"/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/resume_viewing"
		android:id="@+id/resume_viewing"
		android:layout_below="@+id/stop_video"
		android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
		android:enabled="false"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="Medium Text"
		android:maxLines="2000"
		android:scrollbars="vertical"
		android:id="@+id/status" android:layout_below="@+id/stop_video" android:layout_marginTop="101dp" android:layout_alignParentEnd="true" android:layout_alignParentStart="true"/>


</RelativeLayout>
